--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
     "lang": "ru",
     "soundVol": 100,
     "musicVol": 100,
-    "particles": true
+    "particles": true,
+    "highlightSurface": true
 }
