--- a/config.json
+++ b/config.json
@@ -3,5 +3,27 @@
     "soundVol": 100,
     "musicVol": 100,
     "particles": true,
-    "highlightSurface": true
+    "highlightSurface": true,
+    "fontAntialiasingEnabled": true,
+    "texturesAntialiasingEnabled": {"gui": true, "other": true},
+    "shortcuts": [{
+        "up": "w",
+        "down": "s",
+        "left": "a",
+        "right": "d",
+
+        "slot1": "0",
+        "slot2": "1",
+        "slot3": "2",
+        "slot4": "3",
+        "slot5": "4",
+        "slot6": "5",
+        "slot7": "6",
+        "slot8": "7",
+        "slotNext": "wheelUp",
+        "slotPrev": "wheelDown",
+
+        "place": "right",
+        "break": "left"}
+    ]
 }
