--- a/config.json
+++ b/config.json
@@ -1,15 +1,13 @@
 {
     "windowFlags": {
-        "fullscreen": false,
-        "acceleration": false,
-        "noFrame": false,
-        "scaled": true
+        "fullscreen": true,
+        "acceleration": false
     },
     "resolution": [
         1024,
         576
     ],
-    "lang": "ru",
+    "lang": "en",
     "sfx": 100,
     "music": 100,
     "enableAnimations": true,
