--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
         "gui": true,
         "other": true
     },
+    "showGrass": true,
     "shortcuts": [
         {
             "up": "w",
