Добавлены значения smartRender и renderDistance

--- a/config.json
+++ b/config.json
@@ -19,6 +19,8 @@
         "other": true
     },
     "showGrass": true,
+    "smartRender": true,
+    "renderDistance": 16,
     "shortcuts": [
         {
             "up": "w",
